--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header>
       <div class="inner">
         <h1>Shreya</h1>
-        <h2>Cornell</h2>
+        <h2>Cullopulli</h2>
         <a href="https://github.com/sc2697" class="button"><small>Follow me on</small> GitHub</a>
       </div>
     </header>
@@ -28,7 +28,7 @@
     <div id="content-wrapper">
       <div class="inner clearfix">
         <section id="main-content">
-          <p>life is beautiful</p>
+          <p>life is beautiful!</p>
         </section>
 
         <aside id="sidebar">
