yippie-first website :D

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
   <body>
     <header>
       <div class="inner">
-        <h1>Shreya</h1>
-        <h2>Cullopulli</h2>
+        <h1>Shreya :)</h1>
+        <h2>*Cullopulli*</h2>
         <a href="https://github.com/sc2697" class="button"><small>Follow me on</small> GitHub</a>
       </div>
     </header>
@@ -28,7 +28,15 @@
     <div id="content-wrapper">
       <div class="inner clearfix">
         <section id="main-content">
-          <p>life is beautiful!</p>
+          <p>life is <a href="http://buzzfeed.com">beautiful</a>!</p>
+          <br>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/dGpZEuXoFWw" frameborder="0" allowfullscreen></iframe>
+          <p>:D</p>
+
+          <p> Now <a href="http://facebook.com">Magic</a>!</p>
+          <button href="http://facebook.com"> Happy </button>
+          <button onclick="window.location.href=http://facebook.com">Continue</button>
+
         </section>
 
         <aside id="sidebar">
@@ -39,6 +47,6 @@
       </div>
     </div>
 
-  
+
   </body>
 </html>
