--- a/index.html
+++ b/index.html
@@ -19,8 +19,24 @@
   <body>
     <header>
       <div class="inner">
-        <h1>Shreya :)</h1>
-        <h2>*Cullopulli*</h2>
+        <h1>Shreya***</h1>
+        <h2>*It is blue-butterfly day here in spring,
+          <br>
+And with these sky-flakes down in flurry on flurry
+<br>
+There is more unmixed color on the wing
+<br>
+Than flowers will show for days unless they hurry.
+<br>
+
+But these are flowers that fly and all but sing:
+<br>
+And now from having ridden out desire
+<br>
+They lie closed over in the wind and cling
+<br>
+Where wheels have freshly sliced the April mire.
+*</h2>
         <a href="https://github.com/sc2697" class="button"><small>Follow me on</small> GitHub</a>
       </div>
     </header>
@@ -30,12 +46,11 @@
         <section id="main-content">
           <p>life is <a href="http://buzzfeed.com">beautiful</a>!</p>
           <br>
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/dGpZEuXoFWw" frameborder="0" allowfullscreen></iframe>
+
           <p>:D</p>
 
-          <p> Now <a href="http://facebook.com">Magic</a>!</p>
-          <button href="http://facebook.com"> Happy </button>
-          <button onclick="window.location.href=http://facebook.com">Continue</button>
+
+
 
         </section>
 
